# herculens

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.md  LICENSE  PUBLICATIONS.md  README.md  requirements.txt  setup.cfg  setup.py  test_requirements.txt  verify_jaxtronomy.ipynb
GRF_notebooks/: GRF_fitting_imperfect_case.ipynb
herculens/: __init__.py  info.py  unimports.py
jaxtronomy/: info.py
notebooks/: fit_SLITronomy_mocks.ipynb  fit_all_smooth.ipynb  fit_paper_mocks_SLITronomy.ipynb  fit_paper_mocks_VKL.ipynb  fit_pixelated_GRF_potential.ipynb  fit_pixelated_GRF_potential_wavelets.ipynb  fit_pixelated_compact_potential.ipynb  fit_pixelated_compact_potential_and_pixelated_source.ipynb  fit_pixelated_compact_potential_wavelets.ipynb  fit_pixelated_source.ipynb  fit_pixelated_source_and_smooth_mass.ipynb  fit_sample_SLITronomy_mocks.ipynb  fit_sample_VKL_mocks.ipynb  fit_smooth_source_and_mass.ipynb  fit_smooth_source_and_mass_LENSTRONOMY.ipynb  fit_smooth_source_and_mass_MOLET_data.ipynb  fit_smooth_source_bayesian_evidence.ipynb  herculens__Complex_source_with_wavelets.ipynb  herculens__Starting_guide.ipynb  herculens__Subhalo_detection_with_wavelets.ipynb  starting_guide.ipynb  test1.5.ipynb  test1.ipynb  test1_fit_smooth_source.ipynb  test1_fit_smooth_source_nested_sampling.ipynb  test1_wavelets.ipynb  test2.ipynb  test2_constrained.ipynb  test3.ipynb  test3_fit_smooth_source_and_mass.ipynb  test3_fit_smooth_source_and_mass_lenstronomy.ipynb  test4_compact_potential_perturbation.ipynb  test4_compact_potential_perturbation_nn.ipynb  verify_jaxtronomy.ipynb  (+2 more)
(+317 files in other folders)
