[metadata]
name = herculens
version = attr: herculens.VERSION
author = Herculens contributors
description = Differentiable strong lens modeling
license = MIT
url = https://github.com/Herculens/herculens
keywords = lensing, gravitation, astrophysics, modeling, jax
project_urls =
	Changelog = https://github.com/Herculens/herculens/blob/main/CHANGELOG.md
    # Documentation = https://coolest.readthedocs.io/
